--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:700px){
+@media only screen and (max-width: 500px) {
 	header.header{
 	display: grid;
 	grid-template-columns: auto auto;
@@ -30,6 +30,11 @@
 	    height: 24PX;
 	    background-color: white; 
     }
+    .header__boton-carrito img, .header__boton-menu img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
     .principal {
 	background-color: black; 
 	width: 100%;
@@ -40,7 +45,7 @@
     }
     .portada-1{
     	display: grid;
-    	grid-template-rows: 8% 70% 18%;
+    	grid-template-rows: 8% 70% 100px;
     	padding: 20px;
     	background-color: #ca4e4e;
     	width: 100%;
@@ -84,11 +89,29 @@
     .portada-1__seccion-3__caracteristicas {
         display: grid;
         text-align: center;
+        align-items: center;
         padding: 10px;
 
     }
     .portada-1__seccion-3__caracteristicas h3 {
+        display: inline;
+        position: absolute;
         text-decoration: underline;
+        z-index: 10;
+        position: relative;
+    }
+    select {
+        width: 120px;
+        position: absolute;
+        appearance: none;
+        opacity: 0;
+        border-color: none;
+        z-index: 20;
+    }
+    optgroup {
+        width: 100%;
+        background-color: #ca4e4e;
+        color: black;
     }
 
 
