--- a/css/index.css
+++ b/css/index.css
@@ -43,9 +43,14 @@
 	color: white; 
 
     }
+    .productos-destacados, .seccion-catalogo{
+        display: grid;
+        align-items: center;
+        justify-content: center;
+    }
     .portada-1{
     	display: grid;
-    	grid-template-rows: 8% 70% 100px;
+    	grid-template-rows: 8% 70% 20%;
     	padding: 20px;
     	background-color: #ca4e4e;
     	width: 100%;
@@ -86,6 +91,12 @@
     	border-radius:12.5vw;
 
     }
+    .portada-1__seccion-3-precio {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+    }
     .portada-1__seccion-3__caracteristicas {
         display: grid;
         text-align: center;
@@ -112,6 +123,18 @@
         width: 100%;
         background-color: #ca4e4e;
         color: black;
+    }
+    .catalogo {
+        display: grid;
+        align-items: center;
+        width: 100%;
+        height: 80%;
+    }
+    .seccion-catalogo{
+        padding-top: 20px;
+        display: grid;
+        align-items: center;
+        justify-content: center;
     }
 
 
