--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,20 @@
+* {
+    font-family: 'Montserrat', sans-serif;
+
+}
 @media only screen and (max-width: 500px) {
 	header.header{
 	display: grid;
-	grid-template-columns: auto auto;
+	grid-template-columns: 50% 50%;
+    grid-auto-rows: 100%;
 	align-items: center;
 	background-color: white; 
-	height: 8%;
-	padding: 10px;
+	height: 13vw;
+	padding: 1%;
 	z-index: 30;
     }
     h1 {
+        font-size: 10vw;
     	margin: 0;
     	width: auto;
 	    height: auto;
@@ -20,15 +26,14 @@
 
     }
     .header__logo {
-    	
+    	display: grid;
+        height: 4,3%;
     }
-    .header__boton-carrito, .header__boton-menu{
-    	margin: 8px;
-    }
-    header.header__logo, .header__boton-menu, .header__boton-carrito{
-    	width: 24PX;
-	    height: 24PX;
+    
+    .header__boton-menu, .header__boton-carrito{
+    	width: 7vw;
 	    background-color: white; 
+        margin-right: .3em;
     }
     .header__boton-carrito img, .header__boton-menu img {
         width: 100%;
@@ -45,16 +50,17 @@
     }
     .productos-destacados, .seccion-catalogo{
         display: grid;
+        min-height: 5%;
         align-items: center;
         justify-content: center;
     }
     .portada-1{
     	display: grid;
-    	grid-template-rows: 8% 70% 20%;
-    	padding: 20px;
-    	background-color: #ca4e4e;
+    	grid-template-rows: 8vh 55vh 35vw;
+    	padding: 3vw;
+    	background-color: #a0aed7;
     	width: 100%;
-    	height: 74%;
+    	height: 91%;
     }
     .portada-1__seccion-1{
     	display: grid;
@@ -73,6 +79,7 @@
 
     display: grid;
     padding: 5px;
+    grid-template-rows: auto auto auto;
     } 
     .portada-1__seccion-3__botoncomprar {
     	display: grid;
@@ -128,15 +135,115 @@
         display: grid;
         align-items: center;
         width: 100%;
-        height: 80%;
+        height: 90%;
     }
-    .seccion-catalogo{
-        padding-top: 20px;
+    .encabezado-seccion-catalogo{
+        padding: 20px;
         display: grid;
         align-items: center;
         justify-content: center;
+        height: 10%;
+    }
+    .catalogo__imagen-con-boton {
+        display: grid;
+        grid-template-rows: 100%;
+        grid-template-columns: 100%;
+        align-items: end;
+        justify-content: center;
+
+        width: 100%;
+        height: 35%;
+        
+    }
+    .catalogo__imagen-con-boton img {
+        object-fit: cover;
+        z-index: 50;
+        position: absolute;
+
     }
 
+  /*  .catalogo__imagen {
+        display: grid;
+  
+    
+    /*
+    background-color: red;
+    width:100%;
+    height: 40%;
+    justify-content: center;
+    border-radius: 0px;
+    padding: 0px;
+    border: none;
+    color: #fff;
+        
+        
+    }*/
+    .catalogo__boton-contenedor {
+        display: grid;
+        grid-template-rows: 100%;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        z-index: 60;
+        padding: 5%;
+
+    }
+    .catalogo__boton {
+
+        display: grid;
+        height: 47px;
+        width: 126px;
+        align-items: center;
+        background-color: black;
+        color: white;
+        text-align: center;
+        background-color: black;
+        border-radius:12.5vw;
+
+        justify-content: center;
+
+
+    }
+    .catalogo__imagen {
+
+        background-color: red;
+        width: 100%;
+        height: 100%;
+    }
+    footer {
+        display: grid;
+        grid-template-rows: 10% 18% 33% 38%;
+        height: 100vh;
+        justify-content: center;
+        text-align: center;
+    }
+    .footer-titulo {
+
+        display: grid;
+        text-align: center;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-icono-contenedor, .footer-logo-universidad-contenedor {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .footer-icono {
+        width: 20vw;
+    }
+    .footer-texto {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        padding: 4%;
+    }
+    .footer-logo-universidad {
+        width: 30vw;
+    }
 
        
 }
