--- a/css/index.css
+++ b/css/index.css
@@ -22,15 +22,16 @@ nav {
 @media only screen and (max-width: 575px) {
     .slide {
 display: none;
-position: absolute;
-top: 0;
-right: 0;
-transition: all 0.3s ease-in-out;
-width: 0;
-width: 40wv;
-z-index: 30;
-margin-top: 10vh;
-background-color: #99a5b3;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: all 0.3s ease-in-out;
+    width: 0;
+    width: 40wv;
+    z-index: 30;
+    margin-top: 10vh;
+    background-color: #f8f8f9;
+    height: 140px;
   }
   .show-slide {
   width: 8rem;
